xmonad.errors
$ ghc --make xmonad.hs -i -ilib -fforce-recomp -main-is main -dynamic -v0 -outputdir /home/alexey/.xmonad/build-x86_64-linux -o /home/alexey/.xmonad/xmonad-x86_64-linux

xmonad.hs:282:30: error:
    • Variable not in scope: myFocusedBorderColor :: String
    • Perhaps you meant ‘focusedBorderColor’ (imported from XMonad)
    |
282 |         focusedBorderColor = myFocusedBorderColor,
    |                              ^^^^^^^^^^^^^^^^^^^^
